testdata/baselines/reference/submodule/conformance/jsdocTemplateTag.errors.txt
forgot.js(2,12): error TS2304: Cannot find name 'T'.
forgot.js(11,12): error TS2304: Cannot find name 'T'.
forgot.js(13,14): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
forgot.js(23,1): error TS2322: Type '(keyframes: Keyframe[] | PropertyIndexedKeyframes) => void' is not assignable to type '(keyframes: Keyframe[] | PropertyIndexedKeyframes, options?: number | KeyframeAnimationOptions) => Animation'.
  Type 'void' is not assignable to type 'Animation'.


==== forgot.js (4 errors) ====
    /**
     * @param {T} a
               ~
!!! error TS2304: Cannot find name 'T'.
     * @template T
     */
    function f(a) {
        return () => a
    }
    let n = f(1)()
    
    /**
     * @param {T} a
               ~
!!! error TS2304: Cannot find name 'T'.
     * @template T
     * @returns {function(): T}
                 ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
     */
    function g(a) {
        return () => a
    }
    let s = g('hi')()
    
    /**
     * @param {Array.<Object>} keyframes - Can't look up types on Element since it's a global in another file. (But it shouldn't crash).
     */
    Element.prototype.animate = function(keyframes) {};
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '(keyframes: Keyframe[] | PropertyIndexedKeyframes) => void' is not assignable to type '(keyframes: Keyframe[] | PropertyIndexedKeyframes, options?: number | KeyframeAnimationOptions) => Animation'.
!!! error TS2322:   Type 'void' is not assignable to type 'Animation'.
    